@@ -2,9 +2,13 @@
 SH_INSTALLDIR = \dev\install
 SHMEDIA_DIR = \"\\\\dev\\\\shmedia\"
 
+# OpenGL
+OPENGL_DIR = \dev\opengl
+INCLUDES += -I$(OPENGL_DIR)\include
+
 # wxWindows
 WXWIN_DIR = \dev\wxWindows-2.4.2
-INCLUDES += /I$(WXWIN_DIR)\include /I$(WXWIN_DIR)\lib\mswd
+INCLUDES += -I$(WXWIN_DIR)\include -I$(WXWIN_DIR)\lib\mswd
 WXWIN_RELEASE_LDADD = $(WXWIN_DIR)\lib\wxmsw.lib
 WXWIN_DEBUG_LDADD = $(WXWIN_DIR)\lib\wxmswd.lib
 
@@ -12,16 +16,15 @@ CXX = cl /nologo
 AR = link /lib /nologo
 LD = link /nologo
 
-CPPFLAGS = /DWIN32 /DNOMINMAX /D_USE_MATH_DEFINES
-CPPFLAGS += /DSHMEDIA_DIR=$(SHMEDIA_DIR)
+CPPFLAGS = -DWIN32 -DNOMINMAX -D_USE_MATH_DEFINES
+CPPFLAGS += -DSHMEDIA_DIR=$(SHMEDIA_DIR)
 CPPFLAGS += $(INCLUDES)
-#CXXFLAGS = /GR /GX /wd4003
 CXXFLAGS = /GR /EHsc /wd4003
 
 RELEASE_CPPFLAGS = $(CPPFLAGS)
 RELEASE_CXXFLAGS = $(CXXFLAGS) $(RELEASE_CPPFLAGS) /MD /O2
 
-DEBUG_CPPFLAGS = $(CPPFLAGS) /D_DEBUG /DSH_DEBUG
+DEBUG_CPPFLAGS = $(CPPFLAGS) -D_DEBUG -DSH_DEBUG
 DEBUG_CXXFLAGS = $(CXXFLAGS) $(DEBUG_CPPFLAGS) /MDd /Zi /Od
 
 LDFLAGS = 
@@ -42,5 +45,5 @@ clean:
 	-@del devnull
 
 %.d.d: %.cpp
-	@makedepend -f- -o.d.obj $< -- $(RELEASE_CPPFLAGS) > $@ 2>devnull
+	@makedepend -f- -o.d.obj $< -- $(DEBUG_CPPFLAGS) > $@ 2>devnull
 	-@del devnull
